@@ -29,12 +29,14 @@ tests_include=set(('MultiprocPoolLockTest',
                    'MultiprocNoPoolSortQueueTest',
                    'MultiprocLinkNoPoolQueueTest',
                    'TestMPImmediatePostProc',
+                   'MultiprocPoolPipeTest',
                    'MultiprocStorageNoPoolLockTest',
                    'MultiprocNoPoolLockLoggingTest'))
 big_suite_3 = discover_tests(lambda  class_name, test_name, tags: class_name in tests_include)
 
 tests_include=set(('MultiprocPoolQueueTest',
                    'MultiprocFrozenPoolQueueTest',
+                   'MultiprocPoolSortPipeTest',
                    'MultiprocFrozenPoolSortPipeTest',
                    'MultiprocNoPoolSortLockTest',
                    'MultiprocLinkQueueTest',
