@@ -10,44 +10,49 @@ import numpy as np
 import time
 
 def job(traj):
-    traj.f_ares('result', 42, comment='A result')
+    traj.f_ares('$set.$', 42, comment='A result')
 
 
 
 def get_runtime(length):
     filename = os.path.join('tmp', 'hdf5', 'many_runs.hdf5')
-    start = time.time()
+
     with Environment(filename = filename,
-                      log_levels=50, report_progress=(2, 'progress', 50),
+                      log_levels=50, report_progress=(0.0002, 'progress', 50),
                       overwrite_file=True, purge_duplicate_comments=False,
+                      log_stdout=False,
+                      multiproc=False, ncores=2, use_pool=True,
+                      wrap_mode='PIPE', #freeze_pool_input=True,
                       summary_tables=False, small_overview_tables=False) as env:
 
         traj = env.v_traj
 
-        traj.par.x = 0, 'parameter'
+        traj.par.f_apar('x', 0, 'parameter')
 
         traj.f_explore({'x': range(length)})
 
-        max_run = 1000000000
+        # traj.v_full_copy = False
+
+        max_run = 1000
 
         for idx in range(len(traj)):
             if idx > max_run:
                 traj.f_get_run_information(idx, copy=False)['completed'] = 1
-
+        start = time.time()
         env.f_run(job)
         end = time.time()
-        dicts = [traj.f_get_run_information(x) for x in range(min(len(traj), max_run))]
+        # dicts = [traj.f_get_run_information(x) for x in range(min(len(traj), max_run))]
     total = end - start
-    return total/float(len(traj)), total
+    return total/float(min(len(traj), max_run)), total/float(min(len(traj), max_run)) * len(traj)
 
 def main():
-    lengths = [5000, 1000, 500, 100, 50, 10, 5, 1]
+    lengths = [1000000, 500000, 100000, 50000, 10000, 5000, 1000, 500, 100, 50, 10, 5, 1]
     runtimes = [get_runtime(x) for x in lengths]
     avg_runtimes = [x[0] for x in runtimes]
     summed_runtime = [x[1] for x in runtimes]
 
     plt.subplot(2, 1, 1)
-    plt.semilogx(lengths, avg_runtimes, linewidth=2)
+    plt.semilogx(list(reversed(lengths)), list(reversed(avg_runtimes)), linewidth=2)
     plt.xlabel('Runs')
     plt.ylabel('t[s]')
     plt.title('Average Runtime per single run')
@@ -58,7 +63,9 @@ def main():
     plt.xlabel('Runs')
     plt.ylabel('t[s]')
     plt.title('Total runtime of experiment')
+    plt.savefig('avg_runtime_as_func_of_lenght_1000_single_core')
     plt.show()
+
 
 
 
